--- a/React/package.json
+++ b/React/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && rm -rf ../public/static && mv ./build/* ../public/",
+    "build": "react-scripts build && rm -rf ../public/static/* && mv ./build/static/* ../public/static/ && mv ./build/* ../public/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
